--- a/style.css
+++ b/style.css
@@ -87,6 +87,61 @@ body {
         height: 100%;
         width: auto;
     }
+    .text-com {
+        width: 270px;
+    }
+    .competency {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: 3730px;
+        padding: 0;
+    }
+    .competency_img {
+        margin: 0;
+        padding: 15px;
+    }
+    .competency_img::after {
+        top: 20px;
+        left: -15px;    
+    }
+    .content_wid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #h1_com{
+        font-size: 20px;
+        text-align: left;
+        margin-top: 25px;
+    }
+    #p_new{
+        font-size: 14px;
+        text-align: left;
+    }
+    .com {
+        display: none;
+    }
+    .com-mobile {
+        display: block;
+    }
+    .pod-drupal-flex > h1 {
+        font-size: 26px;
+        margin-bottom: 35px;
+    }
+    .pod-drupal-flex {
+        transform: translateY(-2600px);
+    }
+    .pod-drupal-flex-img {
+        align-items: center;
+        flex-direction: column;
+    }
+    .ui-card_new{
+        width: 89vw;
+        height: auto;
+        margin: auto;
+    }
+
 }
 
 @media (min-width: 560px) {
@@ -125,6 +180,9 @@ body {
         height: 1500px;
         background: linear-gradient(to bottom right, rgb(4,6,19), rgb(29,31,43));
         margin-bottom: 150px;
+    }
+    .pod-drupal-flex > h1 {
+        font-size: 50px;
     }
 }
 .menu {
@@ -255,4 +313,135 @@ body {
     left: 0;
     z-index: -1;
     width: 100%;
+}
+
+.competency {
+    max-width: 100%;
+    height: 1200px;
+    padding-left: 12%;
+    padding-top: 35px;
+    overflow: hidden;
+}
+.competency_img {
+    position: relative;
+    width: 170px;
+    margin-right: 150px;
+    margin-top: 75px;
+}
+.competency_img::after {
+    content: "";
+    background: url(img/drupal-coder.svg) no-repeat;
+    opacity: 0.1;
+    top: 10px;
+    left: -75px;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;  
+    background-size: 700px; 
+}
+.com-mobile {
+    display: none;
+}
+.text-com {
+    width: 500px;
+}
+.pod-drupal-flex {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-300px);
+    align-items: center;
+    max-width: 100%;
+}
+.pod-drupal-flex-img {
+    display: flex;
+}
+.pod-drupal-flex {
+    width: 65%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.pod-drupal-flex-img {
+    width: 100%;
+    max-width: 100%;
+}
+#pod-support1 {
+    background: url(img/support1.svg) no-repeat bottom right, white;
+}
+#pod-support2 {
+    background: url(img/support2.svg) no-repeat bottom right, white;
+}
+#pod-support3 {
+    background: url(img/support3.svg) no-repeat bottom right, white;
+}
+#pod-support4 {
+    background: url(img/support4.svg) no-repeat bottom right, white;
+}
+#pod-support5 {
+    background: url(img/support5.svg) no-repeat bottom right, white;
+}
+#pod-support6 {
+    background: url(img/support6.svg) no-repeat bottom right, white;
+}
+#pod-support7 {
+    background: url(img/support7.svg) no-repeat bottom right, white;
+}
+#pod-support8 {
+    background: url(img/support8.svg) no-repeat bottom right, white;
+}
+.color-blue {
+    color: rgb(4,12,55);
+}
+.color-grey {
+    color: rgb(89, 106, 130);
+}
+.container {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+            justify-content: center;
+    position: relative;
+}
+.container .ui-card {
+    height: 20rem;
+    width: 12rem;
+    position: relative;
+    z-index: 1;
+    -webkit-transform: scale(0.6) translateY(-2rem);
+            transform: scale(0.6) translateY(-2rem);
+    opacity: 0;
+    cursor: pointer;
+    pointer-events: none;
+    background: #2e5266;
+    background: linear-gradient(to top, #2e5266, #6e8898);
+    -webkit-transition: 1s;
+    transition: 1s;
+  }
+  
+  .container .ui-card.active {
+    z-index: 3;
+    -webkit-transform: scale(1) translateY(0) translateX(0);
+            transform: scale(1) translateY(0) translateX(0);
+    opacity: 1;
+    pointer-events: auto;
+    -webkit-transition: 1s;
+    transition: 1s;
+  }
+  .container .ui-card.prev,
+  .container .ui-card.next {
+    z-index: 2;
+    -webkit-transform: scale(0.8) translateY(-1rem) translateX(0);
+            transform: scale(0.8) translateY(-1rem) translateX(0);
+    opacity: 0.6;
+    pointer-events: auto;
+    -webkit-transition: 1s;
+    transition: 1s;
+}
+.List li{
+    list-style-type: none;
+}
+.List li::before{
+    content: url(img/ok.png);
 }
