--- a/style.css
+++ b/style.css
@@ -125,6 +125,31 @@ body {
     .com-mobile {
         display: block;
     }
+    .pod-drupal-flex > h1 {
+        font-size: 26px;
+        margin-bottom: 35px;
+    }
+    .pod-drupal-flex {
+        transform: translateY(-2600px);
+    }
+    .pod-drupal-flex-img {
+        align-items: center;
+        flex-direction: column;
+    }
+    .ui-card_new{
+        width: 89vw;
+        height: auto;
+        margin: auto;
+    }
+    #Rate {
+        display: none;
+    }
+
+    #Rate_mob{
+        width: 100%;
+        height: auto;
+    }
+
 }
 
 @media (min-width: 560px) {
@@ -163,6 +188,12 @@ body {
         height: 1500px;
         background: linear-gradient(to bottom right, rgb(4,6,19), rgb(29,31,43));
         margin-bottom: 150px;
+    }
+    .pod-drupal-flex > h1 {
+        font-size: 50px;
+    }
+    #Rate_mob{
+        display: none;
     }
 }
 .menu {
@@ -294,6 +325,7 @@ body {
     z-index: -1;
     width: 100%;
 }
+
 .competency {
     max-width: 100%;
     height: 1200px;
@@ -324,4 +356,104 @@ body {
 }
 .text-com {
     width: 500px;
+}
+
+.pod-drupal-flex {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-300px);
+    align-items: center;
+    max-width: 100%;
+}
+.pod-drupal-flex-img {
+    display: flex;
+}
+.pod-drupal-flex {
+    width: 65%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.pod-drupal-flex-img {
+    width: 100%;
+    max-width: 100%;
+}
+#pod-support1 {
+    background: url(img/support1.svg) no-repeat bottom right, white;
+}
+#pod-support2 {
+    background: url(img/support2.svg) no-repeat bottom right, white;
+}
+#pod-support3 {
+    background: url(img/support3.svg) no-repeat bottom right, white;
+}
+#pod-support4 {
+    background: url(img/support4.svg) no-repeat bottom right, white;
+}
+#pod-support5 {
+    background: url(img/support5.svg) no-repeat bottom right, white;
+}
+#pod-support6 {
+    background: url(img/support6.svg) no-repeat bottom right, white;
+}
+#pod-support7 {
+    background: url(img/support7.svg) no-repeat bottom right, white;
+}
+#pod-support8 {
+    background: url(img/support8.svg) no-repeat bottom right, white;
+}
+.color-blue {
+    color: rgb(4,12,55);
+}
+.color-grey {
+    color: rgb(89, 106, 130);
+}
+.container {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+            justify-content: center;
+    position: relative;
+}
+.container .ui-card {
+    height: 20rem;
+    width: 12rem;
+    position: relative;
+    z-index: 1;
+    -webkit-transform: scale(0.6) translateY(-2rem);
+            transform: scale(0.6) translateY(-2rem);
+    opacity: 0;
+    cursor: pointer;
+    pointer-events: none;
+    background: #2e5266;
+    background: linear-gradient(to top, #2e5266, #6e8898);
+    -webkit-transition: 1s;
+    transition: 1s;
+  }
+  
+  .container .ui-card.active {
+    z-index: 3;
+    -webkit-transform: scale(1) translateY(0) translateX(0);
+            transform: scale(1) translateY(0) translateX(0);
+    opacity: 1;
+    pointer-events: auto;
+    -webkit-transition: 1s;
+    transition: 1s;
+  }
+  .container .ui-card.prev,
+  .container .ui-card.next {
+    z-index: 2;
+    -webkit-transform: scale(0.8) translateY(-1rem) translateX(0);
+            transform: scale(0.8) translateY(-1rem) translateX(0);
+    opacity: 0.6;
+    pointer-events: auto;
+    -webkit-transition: 1s;
+    transition: 1s;
+}
+.List li{
+    list-style-type: none;
+}
+.List li::before{
+    content: url(img/ok.png);
 }
