--- a/style.css
+++ b/style.css
@@ -146,6 +146,40 @@ body {
         width: 100%;
         height: auto;
     }
+    #Razrab{
+        width: 100%;
+        font-size: 10px;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+    #Razrab br{
+        display: none;
+    }
+    .raz_text{
+        font-size: 13px;
+        margin-left: 15px;
+        text-align: left;
+    }
+
+    #Razrab h1{
+        padding-left: 15px;
+        margin-bottom: 25px;
+    }
+
+    #Razrab h1 br{
+        display: none;
+    }
+
+    #Quality{
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+    }
+    
+    .Quality_elem{
+        margin: auto;
+        width: 50vw;
+    }
 
 }
 
