--- a/style.css
+++ b/style.css
@@ -181,6 +181,56 @@ body {
         width: 50vw;
     }
 
+    #Team{
+        width: 85%;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    #Team button{
+        height: 30px; 
+        width: 35vw;
+        font-size: 10px;
+        font-weight: 700;
+        color: rgb(81, 80, 80);
+        vertical-align: middle;
+    }
+
+    .br_team_2{
+        display: none;
+    }
+
+
+    .Team_elem p{
+        margin-bottom: 0px;
+        margin-top: 8px;
+        font-size: 12px;
+    }
+
+    #Team h1{
+        font-size: 22px;
+        margin-bottom: 15px;
+    }
+
+    #Team img{
+        width: 100%;
+    }
+
+    #Team_flex{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .Team_elem{
+        width: 39vw;
+    }
+    .name_razrab{
+        font-size: 14px;
+    }
+
+
 }
 
 @media (min-width: 560px) {
@@ -238,7 +288,7 @@ body {
         padding-left: 35px;
         margin-bottom: 40px;
     }
-    
+
     #Quality{
         display: flex;
         flex-direction: row;
@@ -249,7 +299,60 @@ body {
         width: 300px;
     }
 
+
+    #Team_flex{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
     
+    #Team button{
+        height: 50px; 
+        width: 150px;
+    }
+
+    .Team_elem {
+        text-align: center;
+    }
+    .name_razrab{
+        font-size: 20px;
+    }
+
+    .Team_elem p{
+        font-size: 14px;
+    }
+
+    #Team_flex div img{
+        width: 230px;
+        height: 235px;
+    }
+
+    #Team{
+        height: 800px; 
+        margin-bottom: 200px;
+    }
+
+    #Team h1{
+        margin-bottom: 60px;
+    }
+
+    #Team_flex{
+        width: 900px;
+    }
+
+    .Team_elem{
+        width: 300px; 
+        margin-bottom: 35px;
+    }
+
+    .Team_elem div{
+        width: 230px;
+    }
+    
+    .name_razrab{
+        font-size: 20px;
+    }
 
 }
 .menu {
