Some cosmetic for top bar

--- a/style.css
+++ b/style.css
@@ -315,6 +315,10 @@ h1 {
     transition: all .25s;
 }
 
+#tarif, #sup-drupal, #Admin-text, #Prodvig, #Advertise, #About, #Projects, #Contacts, .Admin-menu {
+    cursor: pointer;
+}
+
 @media (max-width: 560px) {
     #slider_one img,
     #slider_two img {
